<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_background"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:orientation="vertical"
    android:splitMotionEvents="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        >

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Boids.Primary"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/settings_title"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_title"
            app:srcCompat="@drawable/abc_vector_test"
            />


        <TextView
            android:id="@+id/settings_set_wallpaper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/settings_set_live_wallpaper"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_title"
            />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/settings_set_wallpaper"
            tools:layout_editor_absoluteX="21dp"
            />

        <TextView
            android:id="@+id/settings_boids_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/settings_color_boids"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_background_color"
            />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/view_boids_color"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/settings_boids_color"
            app:layout_constraintEnd_toEndOf="@id/settings_boids_color"
            app:layout_constraintTop_toTopOf="@id/settings_boids_color"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@android:color/holo_red_dark"
            app:strokeColor="@color/divider"
            app:strokeWidth="1px"
            />

        <TextView
            android:id="@+id/settings_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/settings_color_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/view_background_color"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/settings_background_color"
            app:layout_constraintEnd_toEndOf="@id/settings_background_color"
            app:layout_constraintTop_toTopOf="@id/settings_background_color"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@color/black"
            app:strokeColor="@color/divider"
            app:strokeWidth="1px"
            />

        <TextView
            android:id="@+id/boids_count_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:text="@string/settings_count_of_particles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            />


        <vadiole.boids2d.view.ValueSeekbar
            android:id="@+id/settings_boids_count"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingLeft="24dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/boids_count_title"
            app:max="15"
            app:progress="10"
            app:progressTint="@android:color/white"
            app:textColor="@android:color/white"
            app:thumbTint="@android:color/white"
            />


        <TextView
            android:id="@+id/boids_size_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:text="@string/settings_size_of_particles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:layout_constraintTop_toBottomOf="@id/settings_boids_count"
            />

        <vadiole.boids2d.view.ValueSeekbar
            android:id="@+id/settings_boids_size"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingLeft="24dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/boids_size_title"
            app:max="15"
            app:progress="10"
            app:progressTint="@android:color/white"
            app:textColor="@android:color/white"
            app:thumbTint="@android:color/white"
            />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/settings_boids_color"
            tools:layout_editor_absoluteX="21dp"
            />


        <TextView
            android:id="@+id/settings_advanced"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="14dp"
            android:text="@string/settings_advanced"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Boids.Primary"
            app:drawableRightCompat="@drawable/selector_expand_collapse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_boids_size"
            />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settings_advanced_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_advanced"
            >

            <include layout="@layout/advanced_settings" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/made_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/settings_made_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Boids.Secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_advanced_container"
            app:layout_constraintVertical_bias="1.0"
            />

        <vadiole.boids2d.view.FireworksOverlay
            android:id="@+id/fireworks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
